--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,5 @@
 # The URL the site will be built for
-base_url = "https://example.com"
-
+base_url = "https://lbellomo.pages.dev"
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
